[package]
name = "tcp_proxy"
version = "0.1.0"
authors = ["tschl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
wakey = "0.1.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
